fix: metrics-item

--- a/style/style.css
+++ b/style/style.css
@@ -501,6 +501,7 @@ html {
   border-bottom: 4px solid #F2BFAF;
   box-shadow: 34.8541px 29.626px 48.34px rgba(51, 102, 255, 0.05);
   border-radius: 20px 20px 0px 0px;
+  background: #fff;
 }
 
 .metrics-item:not(:first-child) {
