--- a/style/style.css
+++ b/style/style.css
@@ -665,3 +665,65 @@ html {
   height: 32px;
   margin-right: 15px;
 }
+
+/* strat-block */
+
+.start-block {
+  margin-bottom: 160px;
+}
+
+.start-block-item {
+  background-image: url(/img/strat-block-bg.png);
+  background-size: 100% 435px;
+  background-repeat: no-repeat;
+}
+
+.start-block-item-info-inner {
+  padding-top: 60px;
+  margin-left: 60px;
+}
+
+.start-block-title {
+  text-align: left;
+  width: 350px;
+}
+
+.start-block-item-txt {
+  width: 390px;
+  font-family: 'Mulish';
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 150%;
+  color: #2D2D2D;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.start-item-btn {
+  font-family: 'Poppins';
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #fff;
+  text-align: center;
+  background-color: #009379;
+  border-radius: 20px;
+  width: 220px;
+  border: none;
+  padding: 18px 50px 18px 50px;
+  cursor: pointer;
+}
+
+.start-item-btn-icon {
+  width: 20px;
+  height: 20px;
+  position: relative;
+  left: 6px;
+  top: 4px;
+}
+
+.start-item-btn-block {
+  padding-bottom: 95px;
+}
+
+  
